# Actix-exercise

./: Cargo.toml  cert.pem  key.pem  nopass.pem
actor-handler/: Cargo.toml
actor-handler/src/: diff_response.rs  main.rs
actor-ping/: Cargo.toml
actor-ping/src/: main.rs
exam/: Cargo.toml
extractors/: Cargo.toml
extractors/src/: error.rs  extractor.rs  helper.rs  json.rs  main.rs  other.rs  over_error.rs  query.rs  recommend.rs
hello_actix/: Cargo.toml
hello_actix/src/: main.rs
url-dispatch/: Cargo.toml
url-dispatch/src/: main.rs
