[package]
name = "extractors"
version = "0.1.0"
authors = ["wuyuz <wang@ik.conm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.2"
derive_more = "0.99"
log = "0.4"
env_logger = "0.7"