[package]
name = "hello_actix"
version = "0.1.0"
authors = ["wuyuz <wang@ik.conm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
env_logger = "0.8"
openssl = "0.10"